// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecurringRunsManager calls API to load recurring runs 1`] = `
<Fragment>
  <Toolbar
    actions={Array []}
    breadcrumbs={Array []}
    pageTitle="Recurring runs"
  />
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 2,
          "label": "Run name",
          "sortKey": "name",
        },
        Object {
          "flex": 2,
          "label": "Created at",
          "sortKey": "created_at",
        },
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "",
        },
      ]
    }
    disableSelection={true}
    emptyMessage="No recurring runs found in this experiment."
    initialSortColumn="created_at"
    reload={[Function]}
    rows={
      Array [
        Object {
          "error": undefined,
          "id": "job1",
          "otherFields": Array [
            "test recurring run name",
            "11/9/2018, 8:07:06 AM",
            true,
          ],
        },
        Object {
          "error": undefined,
          "id": "job2",
          "otherFields": Array [
            "test recurring run name2",
            "11/9/2018, 8:07:06 AM",
            false,
          ],
        },
        Object {
          "error": undefined,
          "id": "job3",
          "otherFields": Array [
            "test recurring run name3",
            "11/9/2018, 8:07:06 AM",
            undefined,
          ],
        },
      ]
    }
    selectedIds={Array []}
    updateSelection={[Function]}
  />
</Fragment>
`;

exports[`RecurringRunsManager reloads the list of runs after enable/disabling 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-113",
      "contained": "MuiButton-contained-103",
      "containedPrimary": "MuiButton-containedPrimary-104",
      "containedSecondary": "MuiButton-containedSecondary-105",
      "disabled": "MuiButton-disabled-112",
      "extendedFab": "MuiButton-extendedFab-110",
      "fab": "MuiButton-fab-109",
      "flat": "MuiButton-flat-97",
      "flatPrimary": "MuiButton-flatPrimary-98",
      "flatSecondary": "MuiButton-flatSecondary-99",
      "focusVisible": "MuiButton-focusVisible-111",
      "fullWidth": "MuiButton-fullWidth-117",
      "label": "MuiButton-label-93",
      "mini": "MuiButton-mini-114",
      "outlined": "MuiButton-outlined-100",
      "outlinedPrimary": "MuiButton-outlinedPrimary-101",
      "outlinedSecondary": "MuiButton-outlinedSecondary-102",
      "raised": "MuiButton-raised-106",
      "raisedPrimary": "MuiButton-raisedPrimary-107",
      "raisedSecondary": "MuiButton-raisedSecondary-108",
      "root": "MuiButton-root-92",
      "sizeLarge": "MuiButton-sizeLarge-116",
      "sizeSmall": "MuiButton-sizeSmall-115",
      "text": "MuiButton-text-94",
      "textPrimary": "MuiButton-textPrimary-95",
      "textSecondary": "MuiButton-textSecondary-96",
    }
  }
  color="primary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-92 MuiButton-text-94 MuiButton-textPrimary-95 MuiButton-flat-97 MuiButton-flatPrimary-98 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-111"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-92 MuiButton-text-94 MuiButton-textPrimary-95 MuiButton-flat-97 MuiButton-flatPrimary-98 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-14",
          "focusVisible": "MuiButtonBase-focusVisible-15",
          "root": "MuiButtonBase-root-13",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-111"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-13 MuiButton-root-92 MuiButton-text-94 MuiButton-textPrimary-95 MuiButton-flat-97 MuiButton-flatPrimary-98 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-93"
        >
          <span>
            Enabled
          </span>
        </span>
        <WithStyles(TouchRipple)
          center={false}
          innerRef={[Function]}
        >
          <TouchRipple
            center={false}
            classes={
              Object {
                "child": "MuiTouchRipple-child-80",
                "childLeaving": "MuiTouchRipple-childLeaving-81",
                "childPulsate": "MuiTouchRipple-childPulsate-82",
                "ripple": "MuiTouchRipple-ripple-77",
                "ripplePulsate": "MuiTouchRipple-ripplePulsate-79",
                "rippleVisible": "MuiTouchRipple-rippleVisible-78",
                "root": "MuiTouchRipple-root-76",
              }
            }
          >
            <TransitionGroup
              childFactory={[Function]}
              className="MuiTouchRipple-root-76"
              component="span"
              enter={true}
              exit={true}
            >
              <span
                className="MuiTouchRipple-root-76"
              />
            </TransitionGroup>
          </TouchRipple>
        </WithStyles(TouchRipple)>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders a disable button if the run is enabled, clicking the button calls disable API 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-113",
      "contained": "MuiButton-contained-103",
      "containedPrimary": "MuiButton-containedPrimary-104",
      "containedSecondary": "MuiButton-containedSecondary-105",
      "disabled": "MuiButton-disabled-112",
      "extendedFab": "MuiButton-extendedFab-110",
      "fab": "MuiButton-fab-109",
      "flat": "MuiButton-flat-97",
      "flatPrimary": "MuiButton-flatPrimary-98",
      "flatSecondary": "MuiButton-flatSecondary-99",
      "focusVisible": "MuiButton-focusVisible-111",
      "fullWidth": "MuiButton-fullWidth-117",
      "label": "MuiButton-label-93",
      "mini": "MuiButton-mini-114",
      "outlined": "MuiButton-outlined-100",
      "outlinedPrimary": "MuiButton-outlinedPrimary-101",
      "outlinedSecondary": "MuiButton-outlinedSecondary-102",
      "raised": "MuiButton-raised-106",
      "raisedPrimary": "MuiButton-raisedPrimary-107",
      "raisedSecondary": "MuiButton-raisedSecondary-108",
      "root": "MuiButton-root-92",
      "sizeLarge": "MuiButton-sizeLarge-116",
      "sizeSmall": "MuiButton-sizeSmall-115",
      "text": "MuiButton-text-94",
      "textPrimary": "MuiButton-textPrimary-95",
      "textSecondary": "MuiButton-textSecondary-96",
    }
  }
  color="primary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-92 MuiButton-text-94 MuiButton-textPrimary-95 MuiButton-flat-97 MuiButton-flatPrimary-98 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-111"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-92 MuiButton-text-94 MuiButton-textPrimary-95 MuiButton-flat-97 MuiButton-flatPrimary-98 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-14",
          "focusVisible": "MuiButtonBase-focusVisible-15",
          "root": "MuiButtonBase-root-13",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-111"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-13 MuiButton-root-92 MuiButton-text-94 MuiButton-textPrimary-95 MuiButton-flat-97 MuiButton-flatPrimary-98 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-93"
        >
          <span>
            Enabled
          </span>
        </span>
        <WithStyles(TouchRipple)
          center={false}
          innerRef={[Function]}
        >
          <TouchRipple
            center={false}
            classes={
              Object {
                "child": "MuiTouchRipple-child-80",
                "childLeaving": "MuiTouchRipple-childLeaving-81",
                "childPulsate": "MuiTouchRipple-childPulsate-82",
                "ripple": "MuiTouchRipple-ripple-77",
                "ripplePulsate": "MuiTouchRipple-ripplePulsate-79",
                "rippleVisible": "MuiTouchRipple-rippleVisible-78",
                "root": "MuiTouchRipple-root-76",
              }
            }
          >
            <TransitionGroup
              childFactory={[Function]}
              className="MuiTouchRipple-root-76"
              component="span"
              enter={true}
              exit={true}
            >
              <span
                className="MuiTouchRipple-root-76"
              />
            </TransitionGroup>
          </TouchRipple>
        </WithStyles(TouchRipple)>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders an enable button if the run is disabled, clicking the button calls enable API 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-113",
      "contained": "MuiButton-contained-103",
      "containedPrimary": "MuiButton-containedPrimary-104",
      "containedSecondary": "MuiButton-containedSecondary-105",
      "disabled": "MuiButton-disabled-112",
      "extendedFab": "MuiButton-extendedFab-110",
      "fab": "MuiButton-fab-109",
      "flat": "MuiButton-flat-97",
      "flatPrimary": "MuiButton-flatPrimary-98",
      "flatSecondary": "MuiButton-flatSecondary-99",
      "focusVisible": "MuiButton-focusVisible-111",
      "fullWidth": "MuiButton-fullWidth-117",
      "label": "MuiButton-label-93",
      "mini": "MuiButton-mini-114",
      "outlined": "MuiButton-outlined-100",
      "outlinedPrimary": "MuiButton-outlinedPrimary-101",
      "outlinedSecondary": "MuiButton-outlinedSecondary-102",
      "raised": "MuiButton-raised-106",
      "raisedPrimary": "MuiButton-raisedPrimary-107",
      "raisedSecondary": "MuiButton-raisedSecondary-108",
      "root": "MuiButton-root-92",
      "sizeLarge": "MuiButton-sizeLarge-116",
      "sizeSmall": "MuiButton-sizeSmall-115",
      "text": "MuiButton-text-94",
      "textPrimary": "MuiButton-textPrimary-95",
      "textSecondary": "MuiButton-textSecondary-96",
    }
  }
  color="secondary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-92 MuiButton-text-94 MuiButton-textSecondary-96 MuiButton-flat-97 MuiButton-flatSecondary-99 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-111"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-92 MuiButton-text-94 MuiButton-textSecondary-96 MuiButton-flat-97 MuiButton-flatSecondary-99 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-14",
          "focusVisible": "MuiButtonBase-focusVisible-15",
          "root": "MuiButtonBase-root-13",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-111"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-13 MuiButton-root-92 MuiButton-text-94 MuiButton-textSecondary-96 MuiButton-flat-97 MuiButton-flatSecondary-99 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-93"
        >
          <span>
            Disabled
          </span>
        </span>
        <WithStyles(TouchRipple)
          center={false}
          innerRef={[Function]}
        >
          <TouchRipple
            center={false}
            classes={
              Object {
                "child": "MuiTouchRipple-child-80",
                "childLeaving": "MuiTouchRipple-childLeaving-81",
                "childPulsate": "MuiTouchRipple-childPulsate-82",
                "ripple": "MuiTouchRipple-ripple-77",
                "ripplePulsate": "MuiTouchRipple-ripplePulsate-79",
                "rippleVisible": "MuiTouchRipple-rippleVisible-78",
                "root": "MuiTouchRipple-root-76",
              }
            }
          >
            <TransitionGroup
              childFactory={[Function]}
              className="MuiTouchRipple-root-76"
              component="span"
              enter={true}
              exit={true}
            >
              <span
                className="MuiTouchRipple-root-76"
              />
            </TransitionGroup>
          </TouchRipple>
        </WithStyles(TouchRipple)>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders an enable button if the run's enabled field is undefined, clicking the button calls enable API 1`] = `
<Button
  className="root"
  classes={
    Object {
      "colorInherit": "MuiButton-colorInherit-113",
      "contained": "MuiButton-contained-103",
      "containedPrimary": "MuiButton-containedPrimary-104",
      "containedSecondary": "MuiButton-containedSecondary-105",
      "disabled": "MuiButton-disabled-112",
      "extendedFab": "MuiButton-extendedFab-110",
      "fab": "MuiButton-fab-109",
      "flat": "MuiButton-flat-97",
      "flatPrimary": "MuiButton-flatPrimary-98",
      "flatSecondary": "MuiButton-flatSecondary-99",
      "focusVisible": "MuiButton-focusVisible-111",
      "fullWidth": "MuiButton-fullWidth-117",
      "label": "MuiButton-label-93",
      "mini": "MuiButton-mini-114",
      "outlined": "MuiButton-outlined-100",
      "outlinedPrimary": "MuiButton-outlinedPrimary-101",
      "outlinedSecondary": "MuiButton-outlinedSecondary-102",
      "raised": "MuiButton-raised-106",
      "raisedPrimary": "MuiButton-raisedPrimary-107",
      "raisedSecondary": "MuiButton-raisedSecondary-108",
      "root": "MuiButton-root-92",
      "sizeLarge": "MuiButton-sizeLarge-116",
      "sizeSmall": "MuiButton-sizeSmall-115",
      "text": "MuiButton-text-94",
      "textPrimary": "MuiButton-textPrimary-95",
      "textSecondary": "MuiButton-textSecondary-96",
    }
  }
  color="secondary"
  component="button"
  disableFocusRipple={false}
  disabled={false}
  fullWidth={false}
  mini={false}
  onClick={[Function]}
  size="medium"
  type="button"
  variant="text"
>
  <WithStyles(ButtonBase)
    className="MuiButton-root-92 MuiButton-text-94 MuiButton-textSecondary-96 MuiButton-flat-97 MuiButton-flatSecondary-99 root"
    component="button"
    disabled={false}
    focusRipple={true}
    focusVisibleClassName="MuiButton-focusVisible-111"
    onClick={[Function]}
    type="button"
  >
    <ButtonBase
      centerRipple={false}
      className="MuiButton-root-92 MuiButton-text-94 MuiButton-textSecondary-96 MuiButton-flat-97 MuiButton-flatSecondary-99 root"
      classes={
        Object {
          "disabled": "MuiButtonBase-disabled-14",
          "focusVisible": "MuiButtonBase-focusVisible-15",
          "root": "MuiButtonBase-root-13",
        }
      }
      component="button"
      disableRipple={false}
      disableTouchRipple={false}
      disabled={false}
      focusRipple={true}
      focusVisibleClassName="MuiButton-focusVisible-111"
      onClick={[Function]}
      tabIndex="0"
      type="button"
    >
      <button
        className="MuiButtonBase-root-13 MuiButton-root-92 MuiButton-text-94 MuiButton-textSecondary-96 MuiButton-flat-97 MuiButton-flatSecondary-99 root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-93"
        >
          <span>
            Disabled
          </span>
        </span>
        <WithStyles(TouchRipple)
          center={false}
          innerRef={[Function]}
        >
          <TouchRipple
            center={false}
            classes={
              Object {
                "child": "MuiTouchRipple-child-80",
                "childLeaving": "MuiTouchRipple-childLeaving-81",
                "childPulsate": "MuiTouchRipple-childPulsate-82",
                "ripple": "MuiTouchRipple-ripple-77",
                "ripplePulsate": "MuiTouchRipple-ripplePulsate-79",
                "rippleVisible": "MuiTouchRipple-rippleVisible-78",
                "root": "MuiTouchRipple-root-76",
              }
            }
          >
            <TransitionGroup
              childFactory={[Function]}
              className="MuiTouchRipple-root-76"
              component="span"
              enter={true}
              exit={true}
            >
              <span
                className="MuiTouchRipple-root-76"
              />
            </TransitionGroup>
          </TouchRipple>
        </WithStyles(TouchRipple)>
      </button>
    </ButtonBase>
  </WithStyles(ButtonBase)>
</Button>
`;

exports[`RecurringRunsManager renders run name as link to its details page 1`] = `
<Link
  className="link"
  replace={false}
  to="/recurringrun/details/run-id"
>
  <a
    className="link"
    href="/recurringrun/details/run-id"
    onClick={[Function]}
  >
    test-run
  </a>
</Link>
`;
